# Drones3D

./: .gitignore  Cargo.toml  run_test_clients_and_server.sh
Frontend/: icon.svg.import  project.godot
Frontend/scenes/: root.tscn
backend/server/: gamestate.rs  main.rs
backend/test-client/: main.rs
frontend/: cube_with_flipped_normals.obj.import  drone_with_gun.mtl  drone_with_gun.obj.import  project.godot
frontend/scenes/: MainCamera.gd  drone_a.tscn  drone_b.tscn  root.tscn
frontend/scripts/: root.gd
src/server/: main.rs
src/test-client/: main.rs
