[package]
name = "drones_3d_backend_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "backend/server/main.rs"

[[bin]]
name = "test-client"
path = "backend/test-client/main.rs"

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
